--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,15 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="bottomButtonsStyle">@style/DefaultMyButtonsStyle</item>
     </style>
+
+    <style name="DefaultMyButtonsStyle">
+        <item name="bottomPositiveBackgroundColor">#880000</item>
+    </style>
+
+    <style name="MyBottomButtonStyle">
+        <item name="bottomPositiveBackgroundColor">#ff8800</item>
+    </style>
+
 </resources>
